updated metadata value
