# gen/proto/go/auth/v1/auth.pb.validate.go
@@ -339,11 +339,11 @@ func (m *AuthUser) validate(all bool) error {
 	// no validation rules for ClientId
 
 	if all {
-		switch v := interface{}(m.GetMetadata()).(type) {
+		switch v := interface{}(m.GetUserMetadata()).(type) {
 		case interface{ ValidateAll() error }:
 			if err := v.ValidateAll(); err != nil {
 				errors = append(errors, AuthUserValidationError{
-					field:  "Metadata",
+					field:  "UserMetadata",
 					reason: "embedded message failed validation",
 					cause:  err,
 				})
@@ -351,16 +351,16 @@ func (m *AuthUser) validate(all bool) error {
 		case interface{ Validate() error }:
 			if err := v.Validate(); err != nil {
 				errors = append(errors, AuthUserValidationError{
-					field:  "Metadata",
+					field:  "UserMetadata",
 					reason: "embedded message failed validation",
 					cause:  err,
 				})
 			}
 		}
-	} else if v, ok := interface{}(m.GetMetadata()).(interface{ Validate() error }); ok {
+	} else if v, ok := interface{}(m.GetUserMetadata()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
 			return AuthUserValidationError{
-				field:  "Metadata",
+				field:  "UserMetadata",
 				reason: "embedded message failed validation",
 				cause:  err,
 			}
@@ -444,22 +444,22 @@ var _ interface {
 	ErrorName() string
 } = AuthUserValidationError{}
 
-// Validate checks the field values on Metadata with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
+// Validate checks the field values on UserMetadata with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
-func (m *Metadata) Validate() error {
+func (m *UserMetadata) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on Metadata with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in MetadataMultiError, or nil
-// if none found.
-func (m *Metadata) ValidateAll() error {
+// ValidateAll checks the field values on UserMetadata with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in UserMetadataMultiError, or
+// nil if none found.
+func (m *UserMetadata) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *Metadata) validate(all bool) error {
+func (m *UserMetadata) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -471,18 +471,18 @@ func (m *Metadata) validate(all bool) error {
 	// no validation rules for Role
 
 	if len(errors) > 0 {
-		return MetadataMultiError(errors)
+		return UserMetadataMultiError(errors)
 	}
 
 	return nil
 }
 
-// MetadataMultiError is an error wrapping multiple validation errors returned
-// by Metadata.ValidateAll() if the designated constraints aren't met.
-type MetadataMultiError []error
+// UserMetadataMultiError is an error wrapping multiple validation errors
+// returned by UserMetadata.ValidateAll() if the designated constraints aren't met.
+type UserMetadataMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m MetadataMultiError) Error() string {
+func (m UserMetadataMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -491,11 +491,11 @@ func (m MetadataMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m MetadataMultiError) AllErrors() []error { return m }
+func (m UserMetadataMultiError) AllErrors() []error { return m }
 
-// MetadataValidationError is the validation error returned by
-// Metadata.Validate if the designated constraints aren't met.
-type MetadataValidationError struct {
+// UserMetadataValidationError is the validation error returned by
+// UserMetadata.Validate if the designated constraints aren't met.
+type UserMetadataValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -503,22 +503,22 @@ type MetadataValidationError struct {
 }
 
 // Field function returns field value.
-func (e MetadataValidationError) Field() string { return e.field }
+func (e UserMetadataValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e MetadataValidationError) Reason() string { return e.reason }
+func (e UserMetadataValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e MetadataValidationError) Cause() error { return e.cause }
+func (e UserMetadataValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e MetadataValidationError) Key() bool { return e.key }
+func (e UserMetadataValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e MetadataValidationError) ErrorName() string { return "MetadataValidationError" }
+func (e UserMetadataValidationError) ErrorName() string { return "UserMetadataValidationError" }
 
 // Error satisfies the builtin error interface
-func (e MetadataValidationError) Error() string {
+func (e UserMetadataValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -530,14 +530,14 @@ func (e MetadataValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sMetadata.%s: %s%s",
+		"invalid %sUserMetadata.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = MetadataValidationError{}
+var _ error = UserMetadataValidationError{}
 
 var _ interface {
 	Field() string
@@ -545,4 +545,4 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = MetadataValidationError{}
+} = UserMetadataValidationError{}
